--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -256,6 +256,16 @@
       "anonymous": "Анон"
     }
   },
+  "auth": {
+    "modal": {
+      "legal": {
+        "intro": "Продолжая, вы соглашаетесь с нашими",
+        "and": "и подтверждаете ознакомление с",
+        "terms": "Условиями использования",
+        "privacy": "Политикой конфиденциальности"
+      }
+    }
+  },
   "wallet": {
     "errors": {
       "authRequired": "Требуется авторизация",
