--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -203,7 +203,13 @@
       "submitting": "Submitting...",
       "loginAction": "Sign in",
       "registerAction": "Sign up",
-      "checkingSession": "Checking session..."
+      "checkingSession": "Checking session...",
+      "legal": {
+        "intro": "By continuing, you agree to our",
+        "and": "and acknowledge the",
+        "terms": "Terms of Service",
+        "privacy": "Privacy Policy"
+      }
     },
     "fields": {
       "email": "Email",
