--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -258,12 +258,29 @@
   },
   "auth": {
     "modal": {
+      "or": "Или",
+      "googleButton": "Продолжить через Google",
+      "googleHint": "Мы создадим или привяжем аккаунт по вашей почте Google.",
       "legal": {
         "intro": "Продолжая, вы соглашаетесь с нашими",
         "and": "и подтверждаете ознакомление с",
         "terms": "Условиями использования",
         "privacy": "Политикой конфиденциальности"
       }
+    },
+    "errors": {
+      "generic": "Не удалось обработать запрос.",
+      "invalidPayload": "Проверьте введённые данные.",
+      "emailTaken": "Этот email уже зарегистрирован.",
+      "nicknameTaken": "Никнейм уже занят.",
+      "invalidCredentials": "Неверный email или пароль.",
+      "passwordAuthUnavailable": "Для этого аккаунта доступен вход только через Google.",
+      "popupBlocked": "Разрешите всплывающие окна для входа через Google.",
+      "oauthCancelled": "Вход через Google был отменён.",
+      "googleFailed": "Не удалось завершить вход через Google.",
+      "googleEmailNotVerified": "Подтвердите свой Google-адрес перед входом.",
+      "network": "Не удалось подключиться к серверу.",
+      "server": "Произошла ошибка сервера. Попробуйте позже."
     }
   },
   "wallet": {
